--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <input type="button" 
+           value="lancia il dado"; 
+           onclick="random()" />
 
     <script src="./js/main.js"></script>
+    <script src="./js/main1.js"></script>
 </body>
 </html>
